--- a/index.html
+++ b/index.html
@@ -4,27 +4,57 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Train Punch</title>
+  <meta name="description" content="筋トレをサクッと記録できる PWA『Train Punch』のホームページ。アプリ起動・支援ページ・プライバシーポリシーはこちら。" />
   <meta name="theme-color" content="#111111" />
   <style>
-    body{font-family:system-ui,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica,Arial;
-         margin:0;padding:40px;max-width:720px;margin:auto;background:#0e1116;color:#e8eef6}
-    a.btn{display:inline-block;padding:12px 16px;border:1px solid #2a3140;border-radius:12px;
-          text-decoration:none;color:#e8eef6;margin:8px 8px 0 0}
-    small{color:#a9b4c0}
+    :root{
+      --bg:#0e1116; --text:#e8eef6; --line:#2a3140; --primary:#0fb6a9; --muted:#a9b4c0;
+    }
+    body{
+      font-family:system-ui,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica,Arial;
+      margin:0; background:var(--bg); color:var(--text);
+    }
+    main{ max-width:720px; padding:40px 20px; margin:auto; }
+    h1{ margin:0 0 8px; }
+    p{ line-height:1.75; }
+    .links{ display:flex; flex-wrap:wrap; gap:10px; margin:10px 0 0; }
+    a.btn{
+      display:inline-block; padding:12px 16px; border:1px solid var(--line); border-radius:12px;
+      text-decoration:none; color:var(--text);
+    }
+    a.btn:hover{ border-color: color-mix(in oklab, var(--primary), #000 45%); }
+    a.btn:focus-visible{
+      outline:2px solid color-mix(in oklab, var(--primary), #fff 20%); outline-offset:2px;
+    }
+    hr{ margin:24px 0; border:0; border-top:1px solid var(--line); }
+    small{ color:var(--muted); }
+    footer{ margin-top:10px; }
   </style>
 </head>
 <body>
-  <h1>Train Punch</h1>
-  <p>筋トレをサクッと記録できる PWA アプリです。</p>
+  <main>
+    <h1>Train Punch</h1>
+    <p>筋トレをサクッと記録できる <strong>PWA</strong> アプリです。オフライン動作・ホーム画面追加に対応。</p>
 
-  <p>
-    <a class="btn" href="/PWA-Traning/">アプリを開く</a>
-    <a class="btn" href="/PWA-Traning/support.html">支援ページ</a>
-    <a class="btn" href="/PWA-Traning/privacy.html" target="_blank" rel="noopener">プライバシーポリシー</a>
-  </p>
+    <div class="links" aria-label="アプリへの導線">
+      <!-- ★ 綴りは PWA-Traning（i なし） -->
+      <a class="btn" href="/PWA-Traning/">アプリを開く</a>
+      <a class="btn" href="/PWA-Traning/support.html">支援ページ</a>
+      <a class="btn" href="/PWA-Traning/privacy.html" target="_blank" rel="noopener">プライバシーポリシー</a>
+    </div>
 
-  <hr style="margin:24px 0;border:0;border-top:1px solid #2a3140" />
-  <p><strong>ads.txt</strong> 設置済み（ルート直下）。AdSense 承認後は支援ページに広告が表示されます。</p>
-  <small>© Train Punch</small>
+    <hr />
+    <p>
+      <strong>ads.txt</strong> 設置済み（ルート直下）。<br />
+      AdSense 承認後、支援ページに広告が表示されます。確認用リンク：
+      <a class="btn" href="/ads.txt">/ads.txt を開く</a>
+    </p>
+
+    <footer>
+      <small>© Train Punch ・お問い合わせ：
+        <a href="mailto:toreninguguanli53@gmail.com">toreninguguanli53@gmail.com</a>
+      </small>
+    </footer>
+  </main>
 </body>
 </html>
