--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
   <title>Train Punch</title>
   <meta name="description" content="筋トレをサクッと記録できる PWA『Train Punch』のホームページ。アプリ起動・支援ページ・プライバシーポリシーはこちら。" />
   <meta name="theme-color" content="#111111" />
+
+  <!-- Google AdSense（サイト全体用ローダー）-->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6494792718518447"
+          crossorigin="anonymous"></script>
+
   <style>
     :root{
       --bg:#0e1116; --text:#e8eef6; --line:#2a3140; --primary:#0fb6a9; --muted:#a9b4c0;
